test/files/neg/javaConversions-2.10-ambiguity.check
javaConversions-2.10-ambiguity.scala:8: error: type mismatch;
 found   : scala.collection.concurrent.Map[String,String]
 required: scala.collection.mutable.ConcurrentMap[String,String]
  assertType[mutable.ConcurrentMap[String, String]](a)
                                                    ^
one error found
